test case updated